@@ -1,3 +1,4 @@
 DIST draper-0.18.0.gem 26624 SHA256 32c3fb7931d1861b4b8e43d6141cc63439ac5572486846e2577ff9754fcd1e8c SHA512 d427f303b6fb5769194ac7dc44facc75c3c060cd77ff62a7e08ec621a78723d2897d58125c5f713036df15290f25ece71fb98ff9eda236a78e9c86a628dfd62e WHIRLPOOL 344328debc6a7e3e56e73016857325a8aeb6bdd76188756d0a7e3d736896caa9262f47e953fb57b02c453d31ca955737c86f206cd4975782d04bc8a43de454cb
 DIST draper-1.2.1.gem 53760 SHA256 d5bdeeb054eb6b9acd998cda768c69768946d55952fdc46b8a801bea5c06ddbd SHA512 57f63818ef2c1dcd038da404b5d411a41c9d6ea0988249e5ef1ea360129d329684ddb3d41dd7e7dd5298757720cbf6283762c48014316246735b6fabd64bec51 WHIRLPOOL f7f0980ecac535def962529563c95a5cadbb0238badaef642daa059ed635888cb4e1a2c4261fbabe1f851217175afcb5bebaf3a6374d8065bc9f7a17779cfb94
 DIST draper-1.3.0.gem 54784 SHA256 2161deafd9cc9d5288af03fa3c30db648aa2243ddaeacab6f63d07a884b6231f SHA512 6fc7a6afa3dd8c7227178849458692248dcd4c4527c3f1515cabdf82164a553e05e9a50b3834218484ad3cc79651455f870a8c4c03c5849a7e8e58c85126632f WHIRLPOOL c50d603e56060cb02aa889ef645cdf563c9830268ef882ce17869ca27e3fc69c4b64ffccd84947feaf1065c23d77e354d650a10d79178b5347d58ebd2c6a61dd
+DIST draper-1.3.1.gem 55296 SHA256 ba6223e963b3d03240628e89919f5a6b597c60f0ae09730a1f303db0b5444b57 SHA512 6458311e652dd5838c13e051697b8ebb9983d8fc0faf1b59f1b82dee9850e9702e4b9c3059bb669491509514d51e5256b68484f519d31a2bc01061e953e9afd6 WHIRLPOOL fc85fca736ca4e26a97330dc80166e6db0b0265565b300de02ce7c6c22f36eb196ac4c2b3d4b9d8ede0667af6bd532b3f786cf7d069292603d8cacb8524257b3
