@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*draper-1.3.1 (17 Jun 2014)
+
+  17 Jun 2014; Hans de Graaff <graaff@gentoo.org> draper-1.3.0.ebuild,
+  +draper-1.3.1.ebuild:
+  Version bump.
+
 *draper-1.3.0 (21 Feb 2014)
 
   21 Feb 2014; Hans de Graaff <graaff@gentoo.org> +draper-1.3.0.ebuild:
